Adds info in readme fixes ci
Readed lining & vet

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,6 @@ notifications:
 # .golangci.yml file at the top level of your repo.
 script:
   # - golangci-lint run       # run a bunch of code checkers/linters in parallel
+  - go lint
+  - go vet
   - go test -v -race ./...  # Run all the tests with the race detector enabled
