Excludes *_test.go from code coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,3 +9,4 @@ sonar.projectName=dw query digest
 sonar.sources=.
 
 sonar.go.coverage.reportPaths=coverage.out
+sonar.coverage.exclusions=*_test.go
