Removes broken Code-Quality.gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ include:
     file: code/generic.yml
   - project: devopsworks/templates/gitlab-ci
     file: docker/generic.yml
-  - template: Code-Quality.gitlab-ci.yml
+  # - template: Code-Quality.gitlab-ci.yml this is broken
   - template: Dependency-Scanning.gitlab-ci.yml
   - template: SAST.gitlab-ci.yml
 
